fix 28767741 allow highlight on nav-link to work in high contrast

--- a/src/SfxWeb/src/styles.scss
+++ b/src/SfxWeb/src/styles.scss
@@ -511,6 +511,13 @@ table.detail-list {
     border-bottom-width: 0px;
     color: #FFFFFF !important;
     border-bottom-color: inherit;
+
+    &:focus-visible {
+        outline: -webkit-focus-ring-color auto 1px;
+        @-moz-document url-prefix() {
+            outline: Highlight auto 1px;
+        }
+    }
 }
 
 .nav-link:hover {
@@ -580,6 +587,7 @@ table.detail-list {
 
     }
   }
+
 }
 
 :checked {
